--- a/Proyecto/estilos.css
+++ b/Proyecto/estilos.css
@@ -159,7 +159,7 @@ body{
 /* codigo cuadros */
 .img1{
   display: flex;
-  background: url(/imagenes/fondo-div.jpg);
+  background: url(./imagenes/fondo-div.jpg);
   color: #ececec;
   width: 100%;
   height: 40vh;
@@ -174,7 +174,7 @@ body{
 .cuadrado{
   width: 100%;
   height: 40vh;
-  background: url(/imagenes/fondo-negro.jpg);
+  background: url(./imagenes/fondo-negro.jpg);
   display: flex;
   align-content: center;
   justify-content: center;
@@ -225,7 +225,7 @@ body{
 .viñedos{
   width: 100%;
   height: 150px;
-  background: url(/imagenes/vinedo1.jpg);
+  background: url(./imagenes/vinedo1.jpg);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -270,7 +270,7 @@ body{
 #vinosfinos{
   width: 100%;
   height: 150px;
-  background: url(/imagenes/Casa-Madero-viñedo.jpg);
+  background: url(./imagenes/Casa-Madero-viñedo.jpg);
   display: flex;
   align-items: center;
   justify-content: center;
