--- a/Proyecto/estilos.css
+++ b/Proyecto/estilos.css
@@ -114,6 +114,7 @@ body {
 
 /* Empieza Código */
 @import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
+
 body{
   font-family: 'Merriweather', serif;
   background: #0c0c0c;
@@ -133,6 +134,7 @@ body{
 }
 .header .h1{
   font-size: 40px;
+  
 }
 
 .header .button{
@@ -150,9 +152,10 @@ body{
   flex-flow: row nowrap;
   justify-content: flex-end;
   align-items: center;
-  font-size: 20px;
+  font-size: 25px;
   
 }
+
 .header .li{
   margin: 0 .5em;
 }
@@ -169,7 +172,43 @@ body{
 }
 .frase{
   font-size: 5em;
-  font-family: 'Merriweather', serif;
+  font-family: 'Merriweather', serif; 
+  transition: linear;
+}
+.frase:hover{
+  width: 300px;
+  height: 300px;
+}
+/*#intro{
+  width: 100%;
+  height: 30vh;
+
+  font-size: 30px;
+  display: inline-block;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding-top: 10px;
+  color: #d3c5c5;
+  background: url(./imagenes/fondo-negro.jpg);
+}
+.infopag{
+  margin: 5px;
+  background: #0c0c0c59;
+}*/
+.historia1{
+  width: 100%;
+  height: 130px;
+  background: url(./imagenes/vineyard.jpg);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-size: 4em;
+  color: rgb(246, 248, 246);
+}
+.titulo-historia{
+  background: #1ac26e56;
 }
 .cuadrado{
   width: 100%;
@@ -182,10 +221,14 @@ body{
 .nota1 {
   width: 30%;
   height: 100%;
-  
   display: flex;  
   border-radius: 6%;
   background-color: rgba(0, 0, 0, 0.753);
+  transition: width 2s, height 3s;
+}
+.nota1:hover {
+  width: 300px;
+  height: 300px;
 }
 .nota2 {
   width: 30%;
@@ -194,6 +237,11 @@ body{
   display: flex;  
   border-radius: 6%;
   background-color: rgb(0, 0, 0);
+  transition: width 2s, height 3s;
+}
+.nota2:hover {
+  width: 300px;
+  height: 300px;
 }
 .nota3 {
   width: 30%;
@@ -202,27 +250,43 @@ body{
   margin-left: 20px;
   border-radius: 6%;
   display: flex;
+  transition: width 2s, height 3s; 
 }
-.copa{
+.nota3:hover {
+  width: 300px;
+  height: 300px;
+}
+
+#historia{
   width: 100%;
   height: 100%;
   border-radius: 6%;
   display: flex;
 }
-.copa1{
+.argentina{
   width: 100%;
   height: 100%;
   border-radius: 6%;
   display: flex;
 
 }
-.sommellier{
+.tiposvinos{
   width: 100%;
   height: 100%;
   border-radius: 6%;
   display: flex;
+  align-items: center;
+
 }
-.viñedos{
+
+
+/*.somm{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px
+}*/
+#bodegas{
   width: 100%;
   height: 150px;
   background: url(./imagenes/vinedo1.jpg);
@@ -231,12 +295,12 @@ body{
   justify-content: center;
   text-align: center;
   font-size: 4em;
-  color: rgb(202, 212, 202);
+  color: rgb(231, 240, 231);
 }
-.tituloviñedos{
+
+.titulobodegas{
   background: #dd0f0f56;
-  border-radius: 6%;
-    
+  border-radius: 6%;;
 }
 
 .video1{
@@ -264,7 +328,14 @@ body{
 .ubicacion-zapata{
   font-size: 15px;
 }
-
+.video4{
+  margin: 40px;
+  font-size: 2em;
+  color: #d3c5c5;
+}
+.ubicacion-bianchi{
+  font-size: 15px;
+}
 /*empieza galeria*/
 
 #vinosfinos{
@@ -277,7 +348,9 @@ body{
   color: #f0e8e8;
   font-size: 3em;
   text-align: center;
+
 }
+
 .titulofinos{
   background-color: #5569ac56;
   border-radius: 6%;
@@ -428,6 +501,34 @@ body{
 
 }
 @media screen and (max-width:760px){
+  .header .button{
+    display: block;
+    cursor: pointer;
+  }
+  .header .nav{
+    width:100%;
+    /* display: none; */
+    height:0;
+    pointer-events: none;
+    overflow: hidden;
+    transition: all .5s ease;
+
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+  }
+  .header .nav.activo{
+    /* display: block; */
+    height:50vh;
+    pointer-events: auto;
+  }
+  .header .ul{
+    flex-direction: column;
+  }
+  .header .li{
+    margin: 1rem 0;
+  } 
   .cuadrado{
     width: 100%;
     height: 30vh;}
