--- a/Proyecto/estilos.css
+++ b/Proyecto/estilos.css
@@ -300,7 +300,7 @@ body{
 
 .titulobodegas{
   background: #dd0f0f56;
-  border-radius: 6%;;
+  border-radius: 6%;
 }
 
 .video1{
@@ -420,7 +420,31 @@ body{
   background-color: rgb(196, 75, 75);
 }
 
-
+.form-label{
+  font-size: 2em;
+  color: #ececec;
+}
+.form-check-label{
+  color: #d3c5c5;
+}
+.pie{
+  width: 100%;
+  height: 15vh;
+  margin-top: 20px;
+  align-items: center;
+  justify-content: space-between;
+}
+.piedepagina{
+  height: 12vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background: rgb(185, 178, 178);
+}
+.insta{
+    margin: 0 .6em;
+}
 
 
 /*medias*/
